--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,86 @@ p {
   }
 
   #img-item {
+    grid-column: 2/6;
+    grid-row: 1/3;
+    margin: 0 auto;
+    width: 25%;
+  }
+
+  .con-item {
+    margin: 10px;
+    background-color: purple;
+  }
+
+  .con-item:nth-child(2) {
+    grid-column: 1/3;
+    grid-row: 1/3;
+  }
+
+  .con-item:nth-child(3) {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+
+  .con-item:nth-child(4) {
+    grid-column: 3/7;
+    grid-row: 3/4;
+  }
+
+  .con-item:nth-child(5) {
+    grid-column: 1/67;
+    grid-row: 4/7;
+  }
+
+  .con-item:nth-child(6) {
+    grid-column: 1/6;
+    grid-row: 7/8;
+  }
+}
+@media screen and (min-width: 768px) {
+  #nav-container {
+    display: grid;
+    color: white;
+    background-color: black;
+    height: 40px;
+    padding-bottom: 20px;
+  }
+
+  .nav-item {
+    padding-top: 20px;
+  }
+
+  .nav-item:first-child {
+    background-color: purple;
+    padding: 20px 0 17px 20px;
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .nav-item:nth-child(2) {
+    grid-column: 4/5;
+    grid-row: 1/2;
+  }
+
+  .nav-item:nth-child(3) {
+    grid-column: 5/6;
+    grid-row: 1/2;
+  }
+
+  .nav-item:nth-child(4) {
+    grid-column: 6/7;
+    grid-row: 1/2;
+  }
+
+  #main-container {
+    display: grid;
+    color: white;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: repeat(10, 75px);
+    padding: 10px;
+  }
+
+  #img-item {
     grid-column: 1/2;
     grid-row: 1/3;
     width: 75%;
